# brats24-glioma-research

./: .gitignore  LICENSE  README.md  data_inventory.csv  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb  02_data_pipeline.ipynb
src/: __init__.py  data_inspector.py  data_loader.py  download_data.py  model.py  train.py  transforms.py
